fix: make anchor opacity 0 and 1 instead of changing visibility (#432)

--- a/src/scss/_anchor.scss
+++ b/src/scss/_anchor.scss
@@ -13,11 +13,11 @@
 
         .yfm-anchor::before {
             content: '#';
-            visibility: hidden;
+            opacity: 0;
         }
 
         &:hover .yfm-anchor::before {
-            visibility: visible;
+            opacity: 1;
         }
     }
 
